ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: osrm-berlin.io
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: osrm-client
              port:
                number: 8000
